[Framework] Loading all trackers at start-up once to avoid constant lookups